class structure refactor

--- a/index.html
+++ b/index.html
@@ -17,17 +17,20 @@
             <h1>My to-do list for this week</h1>
             <div class="todo-container">
                 <div class="todo-list">
-                    <div class="todo blue-grey lighten-5 blue-grey-text text-darken-4">
-                        <div class="todo-text-content">
-                            <label class="done-checkbox">
-                                <input type="checkbox" class="filled-in checkbox-orange"/>
-                                <span></span>
-                            </label>
-                            <p class="title">My First Task</p>
-                        </div>
-                        <p class="description">I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-                        <!--                    <p class="subtask">I have to complete the task</p>-->
-                    </div>
+<!--                    <div class="todo blue-grey lighten-5 blue-grey-text text-darken-4">-->
+<!--                        <div class="todo-text-content">-->
+<!--                            <label class="done-checkbox">-->
+<!--                                <input type="checkbox" class="filled-in checkbox-orange"/>-->
+<!--                                <span></span>-->
+<!--                            </label>-->
+<!--                            <p class="title">My First Task</p>-->
+<!--                            <a class="delete waves-effect btn-flat">-->
+<!--                                <i class="material-icons">delete</i>-->
+<!--                            </a>-->
+<!--                        </div>-->
+<!--                        <p class="description">I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>-->
+<!--                        &lt;!&ndash;                    <p class="subtask">I have to complete the task</p>&ndash;&gt;-->
+<!--                    </div>-->
                 </div>
                 <a class="btn-floating btn-large waves-effect waves-light blue-grey lighten-1" id="add">
                     <i class="material-icons">add</i>
