--- a/pure/index.html
+++ b/pure/index.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <footer></footer>
-        <script src="js/scripts.js"></script>
+        <script src="scripts.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </body>
 </html>
